--- a/Servicios/Cocina-mabe-4-quemadores.html
+++ b/Servicios/Cocina-mabe-4-quemadores.html
@@ -127,27 +127,27 @@ Cocina mabe 4 quemadores - Como destapar un inodoro tapado con jabon
 		  <!--TotalPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Como-destapar-cañerias-de-desague-de-cocina.html">Como destapar cañerias de desague de cocina </a> 
+       <a href="../Servicios/Como-destapar-el-baño-con-bicarbonato-y-vinagre.html">Como destapar el baño con bicarbonato y vinagre </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Guia-destapacaños-pretul.html">Guia destapacaños pretul </a> 
+       <a href="../Servicios/Empresa-De-Destape-De-Cañerias-en-Palermo.html">Empresa De Destape De Cañerias en Palermo </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Como-limpiar-el-inodoro-del-sarro.html">Como limpiar el inodoro del sarro </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-Cerca-De-Mi.html">Destapaciones Cerca De Mi </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Bomba-para-destapar-inodoros.html">Bomba para destapar inodoros </a> 
+       <a href="../Servicios/Destapaciones-Cañerias-en-Palermo.html">Destapaciones Cañerias en Palermo </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Metodo-casero-para-destapar-cañerias.html">Metodo casero para destapar cañerias </a> 
+       <a href="../Destapa-Cañerias/Como-hacer-destapa-cañerias-liquido.html">Como hacer destapa cañerias liquido </a> 
          </li>
 <!--EndPostsList-->
 
@@ -210,42 +210,27 @@ Cocina mabe 4 quemadores - Como destapar un inodoro tapado con jabon
                   <!--TotalRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Descubrimiento-de-la-plata-elemento-quimico.html">Descubrimiento de la plata elemento quimico </a> 
+       <a href="../Destapa-Cañerias/Limpieza-De-Cañerias.html">Limpieza De Cañerias </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapador-De-Baño.html">Destapador De Baño </a> 
+       <a href="../Destapa-Cañerias/Camara-De-Desague-Tapada.html">Camara De Desague Tapada </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Liquido-para-destapar-tuberias-de-agua-potable.html">Liquido para destapar tuberias de agua potable </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-Urgencias-24hs.html">Destapaciones Urgencias 24hs </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Destapar-tuberias-de-aguas-servidas.html">Destapar tuberias de aguas servidas </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-Cerca-De-Mi.html">Destapaciones Cerca De Mi </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapacaños-manual-walmart.html">Destapacaños manual walmart </a> 
-         </li>			  </div>
-<!--EndRandPosts-->
-<!--RandPosts-->
-             <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-24-Hs.html">Destapaciones 24 Hs </a> 
-         </li>			  </div>
-<!--EndRandPosts-->
-<!--RandPosts-->
-             <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Remedio-casero-para-destapar-cañerias.html">Remedio casero para destapar cañerias </a> 
-         </li>			  </div>
-<!--EndRandPosts-->
-<!--RandPosts-->
-             <div id="recent-post">         <li>
-       <a href="../Servicios/Destapaciones-de-cañerias-con-maquinas.html">Destapaciones de cañerias con maquinas </a> 
+       <a href="../Servicios/Destapar-Cañerias-en-Palermo.html">Destapar Cañerias en Palermo </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
@@ -255,12 +240,27 @@ Cocina mabe 4 quemadores - Como destapar un inodoro tapado con jabon
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-Urgencias.html">Destapaciones Urgencias </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-Con-Maquinas-Cloacas.html">Destapaciones Con Maquinas Cloacas </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
        <a href="../Destapa-Cañerias/Harpic-destapacaños-instrucciones.html">Harpic destapacaños instrucciones </a> 
+         </li>			  </div>
+<!--EndRandPosts-->
+<!--RandPosts-->
+             <div id="recent-post">         <li>
+       <a href="../Destapa-Cañerias/Productos-caseros-para-destapar-cañerias.html">Productos caseros para destapar cañerias </a> 
+         </li>			  </div>
+<!--EndRandPosts-->
+<!--RandPosts-->
+             <div id="recent-post">         <li>
+       <a href="../Servicios/Precios-de-destapaciones-de-inodoros.html">Precios de destapaciones de inodoros </a> 
+         </li>			  </div>
+<!--EndRandPosts-->
+<!--RandPosts-->
+             <div id="recent-post">         <li>
+       <a href="../Servicios/Destapar-desague-de-cocina.html">Destapar desague de cocina </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 
